# Simple3dRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
assets/texture/: cube.tga
include/Simple-3D-Renderer/Settings/: config.h
include/Simple3dRenderer/: Renderer.h
include/Simple3dRenderer/Settings/: config.h
libs/ObjFileReader/: CMakeLists.txt
libs/ObjFileReader/include/ObjFileReader/: Model.h
libs/ObjFileReader/src/: Model.cpp
libs/tga/: CMakeLists.txt
libs/tga/include/tga/: TGAImage.h
libs/tga/src/: TGAImage.cpp
src/Simple-3D-Renderer/: 2  MeshLoader.cpp  MeshLoader.h  drawLine-MidPoint.cpp  lineSweeping.cpp  main.cpp
src/Simple-3D-Renderer/Camera/: Camera.cpp  Camera.h  Frustum.cpp
src/Simple-3D-Renderer/Math/: util.cpp  util.h
src/Simple-3D-Renderer/Shaders/: GouradShader.cpp  GouradShader.h  IShader.h
src/Simple-3D-Renderer/TextureProcessing/: textureProcessing.cpp  textureProcessing.h
src/Simple-3D-Renderer/VertexProcessing/: vertexProcessing.cpp  vertexProcessing.h
src/Simple3dRenderer/: main.cpp
src/Simple3dRenderer/Camera/: Camera.cpp  Camera.h  Frustum.cpp  Frustum.h
src/Simple3dRenderer/Math/: mathUtils.cpp  mathUtils.h
src/Simple3dRenderer/Model/: Model.cpp  Model.h
src/Simple3dRenderer/Renderer/: Renderer.cpp
src/Simple3dRenderer/Shaders/: GouradShader.cpp  GouradShader.h  IShader.h  NormalMapping.cpp  NormalMapping.h
src/Simple3dRenderer/Texture/: textureProcessing.cpp  textureProcessing.h
src/Simple3dRenderer/Vertex/: vertexProcessing.cpp  vertexProcessing.h
